@@ -68,3 +68,8 @@ void dolfin::dolfin_end()
   LogManager::log.end();
 }
 //-----------------------------------------------------------------------------
+void dolfin::dolfin_log(bool state)
+{
+  LogManager::log.active(state);
+}
+//-----------------------------------------------------------------------------
